--- a/app/src/main/res/layout/activity_position_delete.xml
+++ b/app/src/main/res/layout/activity_position_delete.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PositionList"
+    tools:context=".PositionDelete"
     android:orientation="vertical"
     android:background="@drawable/ic_background"
     android:weightSum="1000">
@@ -17,12 +17,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Beosztás lista"
+            android:text="Beosztás törlése"
             android:textColor="@color/colorWhite"
             android:textSize="25sp"
             android:layout_centerInParent="true"
             />
-        
+
     </RelativeLayout>
 
     <LinearLayout
@@ -33,12 +33,13 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/lwPositionList"/>
+            android:id="@+id/lwPositionDelete"
+            android:choiceMode="singleChoice"/>
 
     </LinearLayout>
 
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0sp"
         android:layout_weight="130">
@@ -46,15 +47,32 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:background="@drawable/button_background"
             android:textColor="@drawable/button_text_color"
             android:text="Vissza"
             android:drawableLeft="@drawable/menu_logout"
-            android:id="@+id/btPositionListBack"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20sp"
-            android:textAllCaps="false"/>
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="30sp"
+            android:layout_marginLeft="50sp"
+            android:textAllCaps="false"
+            android:id="@+id/btPositionDeleteBack"/>
 
-    </RelativeLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:background="@drawable/button_background"
+            android:textColor="@drawable/button_text_color"
+            android:drawableLeft="@drawable/menu_delete"
+            android:text="Törlés"
+            android:textAllCaps="false"
+            android:layout_marginTop="20sp"
+            android:layout_marginRight="50sp"
+            android:layout_marginLeft="30sp"
+            android:id="@+id/btPositionDeleteExec"
+            />
+
+    </LinearLayout>
 
 </LinearLayout>
