--- a/app/src/main/res/layout/activity_admin_menu.xml
+++ b/app/src/main/res/layout/activity_admin_menu.xml
@@ -131,7 +131,7 @@
             android:layout_weight="0.5"
             android:background="@drawable/button_v2_background"
             android:drawableTop="@drawable/button_menu_car"
-            android:text="Autók kezelése"
+            android:text="Flotta kezelése"
             android:textAllCaps="false"
             android:textColor="@drawable/button_text_color2"
             android:id="@+id/btCar"
