--- a/app/src/main/res/layout/activity_car_brand_handle.xml
+++ b/app/src/main/res/layout/activity_car_brand_handle.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PositionMenu"
+    tools:context=".CarBrandHandle"
     android:orientation="vertical"
     android:weightSum="100"
     android:background="@drawable/ic_background">
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Beosztások kezelése"
+            android:text="Autó gyártmányok kezelése"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="30sp"
@@ -29,85 +29,67 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0sp"
-        android:layout_weight="22"
+        android:layout_weight="25"
         android:orientation="horizontal">
 
         <Button
-            android:background="@drawable/button_v2_background"
-            android:layout_width="wrap_content"
+            android:id="@+id/btCarBrandCreate"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="40sp"
+            android:layout_marginTop="50sp"
+            android:layout_marginRight="20sp"
             android:layout_weight="0.5"
+            android:background="@drawable/button_v2_background"
             android:drawableTop="@drawable/menu_button_useradd"
-            android:text="Létrehozás"
-            android:textColor="@drawable/button_text_color2"
-            android:textAllCaps="false"
-            android:id="@+id/btPositionCreate"
-            android:layout_marginTop="35sp"
-            android:layout_marginLeft="40sp"
-            android:layout_marginRight="20sp"
-            />
-
-        <Button
-            android:background="@drawable/button_v2_background"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:drawableTop="@drawable/menu_button_useredit"
-            android:text="Módosítás"
-            android:textColor="@drawable/button_text_color2"
-            android:textAllCaps="false"
-            android:id="@+id/btPositionModify"
-            android:layout_marginTop="35sp"
-            android:layout_marginLeft="20sp"
-            android:layout_marginRight="40sp"
-            />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="22"
-        android:orientation="horizontal">
-
-
-        <Button
-            android:id="@+id/btPositionDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="40sp"
-            android:layout_marginTop="35sp"
-            android:layout_marginRight="20sp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_v2_background"
-            android:drawableTop="@drawable/menu_button_userdelete"
-            android:text="Törlés"
+            android:text="Gyártmány felvétele"
             android:textAllCaps="false"
             android:textColor="@drawable/button_text_color2" />
 
         <Button
-            android:id="@+id/btPositionList"
-            android:layout_width="wrap_content"
+            android:id="@+id/btCarBrandEdit"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20sp"
+            android:layout_marginTop="50sp"
+            android:layout_marginRight="40sp"
             android:layout_weight="0.5"
+            android:background="@drawable/button_v2_background"
+            android:drawableTop="@drawable/menu_button_useredit"
+            android:text="Gyártmány kezelése"
+            android:textAllCaps="false"
+            android:textColor="@drawable/button_text_color2" />
+
+    </LinearLayout>
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="22"
+        >
+
+
+        <Button
+            android:id="@+id/btCarBrandList"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:layout_marginLeft="20sp"
             android:layout_marginTop="35sp"
             android:layout_marginRight="40sp"
             android:background="@drawable/button_v2_background"
             android:drawableTop="@drawable/menu_button_userlist"
-            android:text="Beosztások"
+            android:text="Autó gyártmányok"
             android:textAllCaps="false"
             android:textColor="@drawable/button_text_color2" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0sp"
         android:layout_weight="33">
-
-
 
         <Button
             android:background="@drawable/button_background"
@@ -117,10 +99,10 @@
             android:text="Vissza"
             android:textColor="@drawable/button_text_color"
             android:textAllCaps="false"
-            android:id="@+id/btPositionMenuBack"
+            android:id="@+id/btCarBrandHandleBack"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="90sp"
+            android:layout_marginBottom="160sp"
             />
 
     </RelativeLayout>
