--- a/app/src/main/res/layout/activity_car_menu.xml
+++ b/app/src/main/res/layout/activity_car_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PositionMenu"
+    tools:context=".CarMenu"
     android:orientation="vertical"
     android:weightSum="100"
     android:background="@drawable/ic_background">
@@ -17,86 +17,46 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Beosztások kezelése"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="30sp"
-            android:textSize="25sp"
-            android:textColor="@color/colorWhite"/>
+            android:text="Flotta kezelése"
+            android:textColor="@color/colorWhite"
+            android:textSize="25sp" />
 
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0sp"
-        android:layout_weight="22"
+        android:layout_weight="40"
         android:orientation="horizontal">
 
         <Button
-            android:background="@drawable/button_v2_background"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:drawableTop="@drawable/menu_button_useradd"
-            android:text="Létrehozás"
-            android:textColor="@drawable/button_text_color2"
-            android:textAllCaps="false"
-            android:id="@+id/btPositionCreate"
-            android:layout_marginTop="35sp"
-            android:layout_marginLeft="40sp"
-            android:layout_marginRight="20sp"
-            />
-
-        <Button
-            android:background="@drawable/button_v2_background"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:drawableTop="@drawable/menu_button_useredit"
-            android:text="Módosítás"
-            android:textColor="@drawable/button_text_color2"
-            android:textAllCaps="false"
-            android:id="@+id/btPositionModify"
-            android:layout_marginTop="35sp"
-            android:layout_marginLeft="20sp"
-            android:layout_marginRight="40sp"
-            />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="22"
-        android:orientation="horizontal">
-
-
-        <Button
-            android:id="@+id/btPositionDelete"
-            android:layout_width="wrap_content"
+            android:id="@+id/btCarHandle"
+            android:layout_width="156dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40sp"
-            android:layout_marginTop="35sp"
+            android:layout_marginTop="150sp"
             android:layout_marginRight="20sp"
             android:layout_weight="0.5"
             android:background="@drawable/button_v2_background"
-            android:drawableTop="@drawable/menu_button_userdelete"
-            android:text="Törlés"
+            android:drawableTop="@drawable/menu_button_car"
+            android:text="Autók kezelése"
             android:textAllCaps="false"
             android:textColor="@drawable/button_text_color2" />
 
         <Button
-            android:id="@+id/btPositionList"
-            android:layout_width="wrap_content"
+            android:id="@+id/btCarBrandHandle"
+            android:layout_width="156dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
             android:layout_marginLeft="20sp"
-            android:layout_marginTop="35sp"
+            android:layout_marginTop="150sp"
             android:layout_marginRight="40sp"
+            android:layout_weight="0.5"
             android:background="@drawable/button_v2_background"
-            android:drawableTop="@drawable/menu_button_userlist"
-            android:text="Beosztások"
+            android:drawableTop="@drawable/menu_button_brand"
+            android:text="Gyártmány kezelése"
             android:textAllCaps="false"
             android:textColor="@drawable/button_text_color2" />
 
@@ -117,10 +77,10 @@
             android:text="Vissza"
             android:textColor="@drawable/button_text_color"
             android:textAllCaps="false"
-            android:id="@+id/btPositionMenuBack"
+            android:id="@+id/btCarMenuBack"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="90sp"
+            android:layout_marginBottom="140sp"
             />
 
     </RelativeLayout>
