--- a/app/src/main/res/layout/activity_admin_menu.xml
+++ b/app/src/main/res/layout/activity_admin_menu.xml
@@ -1,281 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:weightSum="1000"
     tools:context=".AdminMenu"
     android:background="@drawable/ic_background"
+    android:id="@+id/admin_layout"
+    android:fitsSystemWindows="true"
     >
-    
-    <RelativeLayout
-        android:layout_weight="200"
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Főmenü"
-            android:textSize="25sp"
-            android:textColor="@color/colorWhite"
-            android:layout_centerInParent="true"
-            android:id="@+id/twFomenu"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:layout_below="@+id/twFomenu"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="10sp"
-            android:textColor="@color/colorWhite"
-            android:id="@+id/twlogin"
-            />
-
-    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="130"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <Button
-            android:layout_width="0sp"
-            android:layout_height="60sp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_v2_background"
-            android:drawableTop="@drawable/button_menu_user"
-            android:text="Felhasználó kezelés"
-            android:textAllCaps="false"
-            android:textColor="@drawable/button_text_color2"
-            android:id="@+id/btUser"
-            android:textSize="12sp"
-            android:layout_marginTop="1sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="10sp"
-            />
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:id="@+id/toolbar"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:elevation="4dp"></android.support.v7.widget.Toolbar>
 
-        <Button
-            android:layout_width="0sp"
-            android:layout_height="60sp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_v2_background"
-            android:drawableTop="@drawable/button_menu_employee"
-            android:text="Munkavállalók kezelése"
-            android:textAllCaps="false"
-            android:textColor="@drawable/button_text_color2"
-            android:id="@+id/btEmployee"
-            android:textSize="12sp"
-            android:layout_marginTop="1sp"
-            android:layout_marginRight="30sp"
-            android:layout_marginLeft="10sp"
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="130"
-        android:orientation="horizontal">
-
-        <Button
-            android:layout_width="0sp"
-            android:layout_height="60sp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_v2_background"
-            android:drawableTop="@drawable/button_menu_position"
-            android:text="Beosztások kezelése"
-            android:textAllCaps="false"
-            android:textColor="@drawable/button_text_color2"
-            android:id="@+id/btPosition"
-            android:textSize="12sp"
-            android:layout_marginTop="1sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="10sp"
-            />
-
-        <Button
-            android:layout_width="0sp"
-            android:layout_height="60sp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_v2_background"
-            android:drawableTop="@drawable/button_menu_department"
-            android:text="Osztályok kezelése"
-            android:textAllCaps="false"
-            android:textColor="@drawable/button_text_color2"
-            android:id="@+id/btDepartment"
-            android:textSize="12sp"
-            android:layout_marginTop="1sp"
-            android:layout_marginRight="30sp"
-            android:layout_marginLeft="10sp"
-            />
+        <FrameLayout
+            android:id='@+id/fragment_container'
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:weightSum="100">
+                
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="30">
+                    
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" 
+                        android:src="@drawable/logo"
+                        android:layout_centerInParent="true"/>
+                </RelativeLayout>
+            
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="55">
+                
+                <com.airbnb.lottie.LottieAnimationView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:lottie_loop="true"
+                    app:lottie_autoPlay="true"
+                    app:lottie_fileName="main.json"/>
+                
+            </RelativeLayout>
+            </LinearLayout>
+        </FrameLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="130"
-        android:orientation="horizontal">
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view_admin"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/admin_menu">
 
-        <Button
-            android:layout_width="0sp"
-            android:layout_height="60sp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_v2_background"
-            android:drawableTop="@drawable/button_menu_car"
-            android:text="Flotta kezelése"
-            android:textAllCaps="false"
-            android:textColor="@drawable/button_text_color2"
-            android:id="@+id/btCar"
-            android:textSize="12sp"
-            android:layout_marginTop="1sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="10sp"
-            />
+        <include layout="@layout/nav_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-        <Button
-            android:layout_width="0sp"
-            android:layout_height="60sp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_v2_background"
-            android:drawableTop="@drawable/button_menu_mobile"
-            android:text="Mobilok kezelése"
-            android:textAllCaps="false"
-            android:textColor="@drawable/button_text_color2"
-            android:id="@+id/btMobile"
-            android:textSize="12sp"
-            android:layout_marginTop="1sp"
-            android:layout_marginRight="30sp"
-            android:layout_marginLeft="10sp"
-            />
+    </android.support.design.widget.NavigationView>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="130"
-        android:orientation="horizontal">
-
-        <Button
-            android:layout_width="0sp"
-            android:layout_height="60sp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_v2_background"
-            android:drawableTop="@drawable/button_menu_laptop"
-            android:text="Laptopok kezelése"
-            android:textAllCaps="false"
-            android:textColor="@drawable/button_text_color2"
-            android:id="@+id/btLaptop"
-            android:textSize="12sp"
-            android:layout_marginTop="1sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="10sp"
-            />
-
-        <Button
-            android:layout_width="0sp"
-            android:layout_height="60sp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_v2_background"
-            android:drawableTop="@drawable/button_menu_grade"
-            android:text="Fizetés besorolás"
-            android:textAllCaps="false"
-            android:textColor="@drawable/button_text_color2"
-            android:id="@+id/btGrade"
-            android:textSize="12sp"
-            android:layout_marginTop="1sp"
-            android:layout_marginRight="30sp"
-            android:layout_marginLeft="10sp"
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="130"
-        android:orientation="horizontal">
-
-        <Button
-            android:layout_width="0sp"
-            android:layout_height="60sp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_v2_background"
-            android:drawableTop="@drawable/button_menu_trip"
-            android:text="Utak kezelése"
-            android:textAllCaps="false"
-            android:textColor="@drawable/button_text_color2"
-            android:id="@+id/btTrip"
-            android:textSize="12sp"
-            android:layout_marginTop="1sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="10sp"
-            />
-
-        <Button
-            android:layout_width="0sp"
-            android:layout_height="60sp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_v2_background"
-            android:drawableTop="@drawable/button_menu_transactions"
-            android:text="Céges eszközök"
-            android:textAllCaps="false"
-            android:textColor="@drawable/button_text_color2"
-            android:id="@+id/btTrans"
-            android:textSize="12sp"
-            android:layout_marginTop="1sp"
-            android:layout_marginRight="30sp"
-            android:layout_marginLeft="10sp"
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="130"
-        android:orientation="horizontal">
-
-        <Button
-            android:layout_width="0sp"
-            android:layout_height="60sp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_v2_background"
-            android:drawableTop="@drawable/button_menu_log"
-            android:text="Adatbázis előzmények"
-            android:textAllCaps="false"
-            android:textColor="@drawable/button_text_color2"
-            android:id="@+id/btLog"
-            android:textSize="12sp"
-            android:layout_marginTop="1sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="10sp"
-            />
-
-        <Button
-            android:layout_width="0sp"
-            android:layout_height="60sp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_background"
-            android:text="Kijelentkezés"
-            android:textAllCaps="false"
-            android:textColor="@drawable/button_text_color"
-            android:drawableTop="@drawable/menu_logout"
-            android:id="@+id/btLogout"
-            android:textSize="12sp"
-            android:layout_marginTop="1sp"
-            android:layout_marginRight="30sp"
-            android:layout_marginLeft="10sp"
-            />
-    </LinearLayout>
-
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
