03/21 Facilities Menu completed

--- a/app/src/main/res/layout/employee_edit_row.xml
+++ b/app/src/main/res/layout/employee_edit_row.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="Név: "
                 android:drawableLeft="@drawable/button_menu_user"
                 />
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="Tony Stark"
                 android:layout_toRightOf="@id/twName"
                 android:textStyle="bold"
@@ -52,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="Neme: "
 
                 android:layout_below="@id/twName"
@@ -63,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="Férfi"
                 android:layout_toRightOf="@id/twGender"
                 android:layout_below="@id/twName"
@@ -75,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="Szül. idő: "
                 android:layout_below="@id/twGender"
                 />
@@ -85,7 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="1993-01-25"
                 android:layout_toRightOf="@id/twBirth"
                 android:layout_below="@id/twGender"
@@ -97,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="Anyja neve: "
                 android:layout_below="@id/twBirth"
                 />
@@ -107,7 +107,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="Sukár Rózsi"
                 android:layout_toRightOf="@id/twMoName"
                 android:layout_below="@id/twBirth"
@@ -128,7 +128,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="Osztály: "
                 />
 
@@ -138,7 +138,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="Human Resources"
                 android:layout_toRightOf="@id/twDepName"
                 android:textStyle="bold"
@@ -150,7 +150,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_marginTop="2dp"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="Beosztás: "
                 android:layout_below="@id/twDepName"
                 />
@@ -161,7 +161,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_marginTop="2dp"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="Manager"
                 android:layout_toRightOf="@id/twPosName"
                 android:textStyle="bold"
@@ -173,7 +173,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="Státusz: "
                 android:layout_below="@id/twPosName"
                 />
@@ -183,7 +183,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="Aktív"
                 android:layout_toRightOf="@id/twStatus"
                 android:textStyle="bold"
@@ -195,7 +195,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="Fizetés: "
                 android:layout_below="@id/twStatus"
                 />
@@ -205,7 +205,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="450000"
                 android:layout_toRightOf="@id/twSalary"
                 android:textStyle="bold"
@@ -216,7 +216,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="HUF"
                 android:layout_toRightOf="@id/twEmpSalary"
                 android:textStyle="bold"
