--- a/app/src/main/res/layout/activity_employee_handle.xml
+++ b/app/src/main/res/layout/activity_employee_handle.xml
@@ -34,10 +34,12 @@
 
         <Button
             android:id="@+id/btEmployeeCreate"
-            android:layout_width="140sp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minWidth="150dp"
+            android:minHeight="110dp"
             android:layout_marginLeft="40sp"
-            android:layout_marginTop="50sp"
+            android:layout_gravity="center"
             android:layout_marginRight="20sp"
             android:layout_weight="0.5"
             android:background="@drawable/button_v2_background"
@@ -48,10 +50,12 @@
 
         <Button
             android:id="@+id/btEmployeeEdit"
-            android:layout_width="140sp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minWidth="150dp"
+            android:minHeight="110dp"
             android:layout_marginLeft="20sp"
-            android:layout_marginTop="50sp"
+            android:layout_gravity="center"
             android:layout_marginRight="40sp"
             android:layout_weight="0.5"
             android:background="@drawable/button_v2_background"
@@ -75,9 +79,6 @@
             android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="20sp"
-            android:layout_marginTop="35sp"
-            android:layout_marginRight="40sp"
             android:background="@drawable/button_v2_background"
             android:drawableTop="@drawable/menu_button_userlist"
             android:text="Munkavállalók"
@@ -100,9 +101,7 @@
             android:textColor="@drawable/button_text_color"
             android:textAllCaps="false"
             android:id="@+id/btEmployeeHandleBack"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="160sp"
+            android:layout_centerInParent="true"
             />
 
     </RelativeLayout>
