--- a/app/src/main/res/layout/activity_car_menu.xml
+++ b/app/src/main/res/layout/activity_car_menu.xml
@@ -34,10 +34,12 @@
 
         <Button
             android:id="@+id/btCarHandle"
-            android:layout_width="156dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minWidth="150dp"
+            android:minHeight="110dp"
             android:layout_marginLeft="40sp"
-            android:layout_marginTop="150sp"
+            android:layout_gravity="center"
             android:layout_marginRight="20sp"
             android:layout_weight="0.5"
             android:background="@drawable/button_v2_background"
@@ -48,10 +50,12 @@
 
         <Button
             android:id="@+id/btCarBrandHandle"
-            android:layout_width="156dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minWidth="150dp"
+            android:minHeight="110dp"
             android:layout_marginLeft="20sp"
-            android:layout_marginTop="150sp"
+            android:layout_gravity="center"
             android:layout_marginRight="40sp"
             android:layout_weight="0.5"
             android:background="@drawable/button_v2_background"
@@ -78,9 +82,7 @@
             android:textColor="@drawable/button_text_color"
             android:textAllCaps="false"
             android:id="@+id/btCarMenuBack"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="140sp"
+            android:layout_centerInParent="true"
             />
 
     </RelativeLayout>
