--- a/app/src/main/res/layout/mobile_benefit_edit.xml
+++ b/app/src/main/res/layout/mobile_benefit_edit.xml
@@ -36,6 +36,30 @@
             />
 
         <TextView
+            android:id="@+id/twUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="9dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp"
+            android:text="Felhasználónév: "
+            android:layout_toRightOf="@+id/twNameOfEmp"
+            android:paddingLeft="10dp"
+            />
+
+        <TextView
+            android:id="@+id/twNameOfUser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="9dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp"
+            android:text="x605149"
+            android:layout_toRightOf="@id/twUserName"
+            android:textStyle="bold"
+            />
+
+        <TextView
             android:id="@+id/twMobileType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
