--- a/app/src/main/res/menu/facilities_menu.xml
+++ b/app/src/main/res/menu/facilities_menu.xml
@@ -27,7 +27,7 @@
         </menu>
     </item>
 
-    <item android:title="QR kód készítés">
+    <item android:title="QR kód kezelés">
         <menu>
             <item
                 android:id="@+id/navQrCreate"
