--- a/app/src/main/res/layout/laptop_brand_edit_row.xml
+++ b/app/src/main/res/layout/laptop_brand_edit_row.xml
@@ -7,49 +7,79 @@
     android:background="@drawable/selected_list_view_background"
     >
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
         >
+
+        <TextView
+            android:id="@+id/twLaptopBrandTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/button_menu_laptop"
+            android:text="Márka: "
+            android:textSize="15sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/twLaptopBrand"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/button_menu_laptop"
-            android:text="Iphone"
-            android:textSize="18sp"
+            android:text="Lenovo"
+            android:textSize="15sp"
             android:textColor="@color/colorPrimaryDark"
-            android:layout_gravity="center"/>
+            android:layout_toRightOf="@+id/twLaptopBrandTitle"
+            />
+
+        <TextView
+            android:id="@+id/twLaptopTypeTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/button_menu_data"
+            android:text="Típus: "
+            android:textSize="15sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            android:layout_below="@+id/twLaptopBrandTitle"/>
 
         <TextView
             android:id="@+id/twLaptopType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/twLaptopType"
+            android:layout_below="@id/twLaptopBrandTitle"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="18sp"
-            android:text="XS"
-            android:drawableLeft="@drawable/button_menu_data"
-            android:layout_gravity="center"
-            android:paddingLeft="10sp"
-            android:paddingRight="20sp"
+            android:textSize="15sp"
+            android:text="ThinkPad"
+            android:layout_toRightOf="@+id/twLaptopTypeTitle"
+
+            />
+
+        <TextView
+            android:id="@+id/twGradeNameTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/button_menu_grade"
+            android:text="Kategória (fizetés besorolás): "
+            android:textSize="15sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            android:layout_below="@+id/twLaptopTypeTitle"
             />
 
         <TextView
             android:id="@+id/twGradeName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/twLaptopType"
+            android:layout_below="@+id/twLaptopTypeTitle"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:text="Grade 4"
-            android:drawableLeft="@drawable/button_menu_grade"
+            android:layout_toRightOf="@+id/twGradeNameTitle"
             android:layout_gravity="center"
             />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </LinearLayout>
